Solved error. Final trajectory solution can be succesfully followed in simulation. Saved new best parameters file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -182,6 +182,30 @@ target_link_libraries(${PROJECT_NAME}_node ${OMPL_LIBRARIES})
 target_link_libraries(${PROJECT_NAME}_node ${catkin_LIBRARIES})
 target_link_libraries(${PROJECT_NAME}_node rbdl)
 target_link_libraries(${PROJECT_NAME}_node X11)
+
+set_target_properties(${PROJECT_NAME}_node PROPERTIES COMPILE_FLAGS "-O3")
+
+
+
+add_executable(test_planner_node src/test_planner_node.cpp
+  src/GlobalParams.cpp
+  src/JackalStatePropagator.cpp
+  src/TerrainMap.cpp
+  src/JackalDynamicSolver.cpp
+  src/PlannerVisualizer.cpp
+  src/utils.cpp
+  src/VehicleStateSpace.cpp
+  src/VehicleStateProjections.cpp
+  )
+
+target_link_libraries(test_planner_node ${OCTOMAP_LIBRARIES})
+target_link_libraries(test_planner_node ${OMPL_LIBRARIES})
+target_link_libraries(test_planner_node ${catkin_LIBRARIES})
+target_link_libraries(test_planner_node rbdl)
+target_link_libraries(test_planner_node X11)
+
+set_target_properties(test_planner_node PROPERTIES COMPILE_FLAGS "-O3")
+
 #############
 ## Install ##
 #############
