--- a/config/params.yaml
+++ b/config/params.yaml
@@ -20,5 +20,5 @@ heading_heuristic: 0  # 0 -> 1, 1 is try to match heading, 0 is try to match pos
 forward_variance: 1
 angular_variance: .3
 p_gain: 1
-
-    
+goal_tolerance: .01 #goal region is a square +-goal_tolerance
+max_gp_runtime: 600 #maximum global planner runtime in seconds
