--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,5 @@
 cmake_minimum_required(VERSION 3.0.2)
 project(auvsl_planner)
-gensrv()
 
 ## Compile as C++11, supported in ROS Kinetic and newer
 # add_compile_options(-std=c++11)
@@ -41,6 +40,14 @@ gensrv()
 ##     and list every .msg/.srv/.action file to be processed
 ##   * uncomment the generate_messages entry below
 ##   * add every package in MSG_DEP_SET to generate_messages(DEPENDENCIES ...)
+
+find_package(catkin REQUIRED COMPONENTS
+  roscpp
+  rospy
+  std_msgs
+  message_generation
+)
+
 
 ## Generate messages in the 'msg' folder
 add_message_files(
@@ -145,16 +152,9 @@ ${catkin_INCLUDE_DIRS}
 #   ${catkin_LIBRARIES}
 # )
 
-include_directories(src/dynamic_model/auvsl_sim include/auvsl_planner)
+include_directories(include/auvsl_planner)
 
 
-
-find_package(catkin REQUIRED COMPONENTS
-  roscpp
-  rospy
-  std_msgs
-  message_generation
-)
 
 
 find_package(octomap REQUIRED)
@@ -166,7 +166,9 @@ include_directories(${OMPL_INCLUDE_DIRS})
 
 
 add_executable(${PROJECT_NAME}_node src/auvsl_planner_node.cpp
+  src/DStarPlanner.cpp
   src/GlobalParams.cpp
+  src/GlobalPlanner.cpp
   src/JackalStatePropagator.cpp
   src/TerrainMap.cpp
   src/JackalDynamicSolver.cpp
@@ -186,59 +188,61 @@ target_link_libraries(${PROJECT_NAME}_node ${catkin_LIBRARIES})
 target_link_libraries(${PROJECT_NAME}_node rbdl)
 target_link_libraries(${PROJECT_NAME}_node X11)
 
-set_target_properties(${PROJECT_NAME}_node PROPERTIES COMPILE_FLAGS "-O3")
+set_target_properties(${PROJECT_NAME}_node PROPERTIES COMPILE_FLAGS "-O3 -g")
 
 
 
-add_executable(test_planner_node src/test_planner_node.cpp
-  src/GlobalParams.cpp
-  src/JackalStatePropagator.cpp
-  src/TerrainMap.cpp
-  src/JackalDynamicSolver.cpp
-  src/PlannerVisualizer.cpp
-  src/utils.cpp
-  src/VehicleStateSpace.cpp
-  src/VehicleStateProjections.cpp
-  src/VehicleControlSampler.cpp
-  src/DirectedVehicleControlSampler.cpp
-  src/VehicleRRT.cpp
-  )
+#add_executable(test_planner_node src/test_planner_node.cpp
+#  src/DStarPlanner.cpp
+#  src/GlobalParams.cpp
+#  src/JackalStatePropagator.cpp
+#  src/TerrainMap.cpp
+#  src/JackalDynamicSolver.cpp
+#  src/PlannerVisualizer.cpp
+#  src/utils.cpp
+#  src/VehicleStateSpace.cpp
+#  src/VehicleStateProjections.cpp
+#  src/VehicleControlSampler.cpp
+#  src/DirectedVehicleControlSampler.cpp
+#  src/VehicleRRT.cpp
+#  )
 
-target_link_libraries(test_planner_node ${OCTOMAP_LIBRARIES})
-target_link_libraries(test_planner_node ${OMPL_LIBRARIES})
-target_link_libraries(test_planner_node ${catkin_LIBRARIES})
-target_link_libraries(test_planner_node rbdl)
-target_link_libraries(test_planner_node X11)
+#target_link_libraries(test_planner_node ${OCTOMAP_LIBRARIES})
+#target_link_libraries(test_planner_node ${OMPL_LIBRARIES})
+#target_link_libraries(test_planner_node ${catkin_LIBRARIES})
+#target_link_libraries(test_planner_node rbdl)
+#target_link_libraries(test_planner_node X11)
 
-set_target_properties(test_planner_node PROPERTIES COMPILE_FLAGS "-O3")
-
-
-
+#set_target_properties(test_planner_node PROPERTIES COMPILE_FLAGS "-O3")
 
 
 
 
-add_executable(steerability_node src/test_steerability_node.cpp
-  src/GlobalParams.cpp
-  src/JackalStatePropagator.cpp
-  src/TerrainMap.cpp
-  src/JackalDynamicSolver.cpp
-  src/PlannerVisualizer.cpp
-  src/utils.cpp
-  src/VehicleStateSpace.cpp
-  src/VehicleStateProjections.cpp
-  src/VehicleControlSampler.cpp
-  src/DirectedVehicleControlSampler.cpp
-  src/VehicleRRT.cpp
-  )
 
-target_link_libraries(steerability_node ${OCTOMAP_LIBRARIES})
-target_link_libraries(steerability_node ${OMPL_LIBRARIES})
-target_link_libraries(steerability_node ${catkin_LIBRARIES})
-target_link_libraries(steerability_node rbdl)
-target_link_libraries(steerability_node X11)
 
-set_target_properties(steerability_node PROPERTIES COMPILE_FLAGS "-O3")
+
+#add_executable(steerability_node src/test_steerability_node.cpp
+#  src/DStarPlanner.cpp
+#  src/GlobalParams.cpp
+#  src/JackalStatePropagator.cpp
+#  src/TerrainMap.cpp
+#  src/JackalDynamicSolver.cpp
+#  src/PlannerVisualizer.cpp
+#  src/utils.cpp
+#  src/VehicleStateSpace.cpp
+#  src/VehicleStateProjections.cpp
+#  src/VehicleControlSampler.cpp
+#  src/DirectedVehicleControlSampler.cpp
+#  src/VehicleRRT.cpp
+#  )
+
+#target_link_libraries(steerability_node ${OCTOMAP_LIBRARIES})
+#target_link_libraries(steerability_node ${OMPL_LIBRARIES})
+#target_link_libraries(steerability_node ${catkin_LIBRARIES})
+#target_link_libraries(steerability_node rbdl)
+#target_link_libraries(steerability_node X11)
+
+#set_target_properties(steerability_node PROPERTIES COMPILE_FLAGS "-O3")
 
 #############
 ## Install ##
