Have an error currently

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -188,32 +188,7 @@ target_link_libraries(${PROJECT_NAME}_node ${catkin_LIBRARIES})
 target_link_libraries(${PROJECT_NAME}_node rbdl)
 target_link_libraries(${PROJECT_NAME}_node X11)
 
-set_target_properties(${PROJECT_NAME}_node PROPERTIES COMPILE_FLAGS "")
-
-
-
-#add_executable(test_planner_node src/test_planner_node.cpp
-#  src/DStarPlanner.cpp
-#  src/GlobalParams.cpp
-#  src/JackalStatePropagator.cpp
-#  src/TerrainMap.cpp
-#  src/JackalDynamicSolver.cpp
-#  src/PlannerVisualizer.cpp
-#  src/utils.cpp
-#  src/VehicleStateSpace.cpp
-#  src/VehicleStateProjections.cpp
-#  src/VehicleControlSampler.cpp
-#  src/DirectedVehicleControlSampler.cpp
-#  src/VehicleRRT.cpp
-#  )
-
-#target_link_libraries(test_planner_node ${OCTOMAP_LIBRARIES})
-#target_link_libraries(test_planner_node ${OMPL_LIBRARIES})
-#target_link_libraries(test_planner_node ${catkin_LIBRARIES})
-#target_link_libraries(test_planner_node rbdl)
-#target_link_libraries(test_planner_node X11)
-
-#set_target_properties(test_planner_node PROPERTIES COMPILE_FLAGS "-O3")
+set_target_properties(${PROJECT_NAME}_node PROPERTIES COMPILE_FLAGS "-O3")
 
 
 
@@ -221,28 +196,34 @@ set_target_properties(${PROJECT_NAME}_node PROPERTIES COMPILE_FLAGS "")
 
 
 
-#add_executable(steerability_node src/test_steerability_node.cpp
-#  src/DStarPlanner.cpp
-#  src/GlobalParams.cpp
-#  src/JackalStatePropagator.cpp
-#  src/TerrainMap.cpp
-#  src/JackalDynamicSolver.cpp
-#  src/PlannerVisualizer.cpp
-#  src/utils.cpp
-#  src/VehicleStateSpace.cpp
-#  src/VehicleStateProjections.cpp
-#  src/VehicleControlSampler.cpp
-#  src/DirectedVehicleControlSampler.cpp
-#  src/VehicleRRT.cpp
-#  )
 
-#target_link_libraries(steerability_node ${OCTOMAP_LIBRARIES})
-#target_link_libraries(steerability_node ${OMPL_LIBRARIES})
-#target_link_libraries(steerability_node ${catkin_LIBRARIES})
-#target_link_libraries(steerability_node rbdl)
-#target_link_libraries(steerability_node X11)
+add_executable(test_planner_node src/test_planner_node.cpp
+  src/DStarPlanner.cpp
+  src/GlobalParams.cpp
+  src/GlobalPlanner.cpp
+  src/JackalStatePropagator.cpp
+  src/TerrainMap.cpp
+  src/JackalDynamicSolver.cpp
+  src/PlannerVisualizer.cpp
+  src/utils.cpp
+  src/VehicleStateSpace.cpp
+  src/VehicleStateProjections.cpp
+  src/VehicleControlSampler.cpp
+  src/DirectedVehicleControlSampler.cpp
+  src/VehicleRRT.cpp
+  )
 
-#set_target_properties(steerability_node PROPERTIES COMPILE_FLAGS "-O3")
+
+target_link_libraries(test_planner_node ${OCTOMAP_LIBRARIES})
+target_link_libraries(test_planner_node ${OMPL_LIBRARIES})
+target_link_libraries(test_planner_node ${catkin_LIBRARIES})
+target_link_libraries(test_planner_node rbdl)
+target_link_libraries(test_planner_node X11)
+
+set_target_properties(test_planner_node PROPERTIES COMPILE_FLAGS "")
+
+
+
 
 #############
 ## Install ##
