--- a/package.xml
+++ b/package.xml
@@ -35,7 +35,6 @@
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
-  <build_depend>octomap</build_depend>
   <build_depend>ompl</build_depend>
 
   <build_export_depend>roscpp</build_export_depend>
@@ -46,18 +45,18 @@
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
-  <exec_depend>octomap</exec_depend>
   <exec_depend>ompl</exec_depend>
 
   <depend>nav_core</depend>
   <depend>costmap_2d</depend>
   <depend>pluginlib</depend>
   <depend>move_base</depend>
+  <depend>octomap</depend>
   
   <!-- The export tag contains other, unspecified, tags -->
   <export>
 
-  <nav_core plugin="${prefix}/global_planner_plugin.xml" />
+  <nav_core plugin="${prefix}/lib/global_planner_plugin.xml" />
 
   </export>
 </package>
