--- a/package.xml
+++ b/package.xml
@@ -36,6 +36,7 @@
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>ompl</build_depend>
+  <build_depend>nav_core</build_depend>
 
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
@@ -46,8 +47,10 @@
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>ompl</exec_depend>
+  <exec_depend>nav_core</exec_depend>
 
-  <depend>nav_core</depend>
+
+  
   <depend>costmap_2d</depend>
   <depend>pluginlib</depend>
   <depend>move_base</depend>
