--- a/config/costmap_common_params.yaml
+++ b/config/costmap_common_params.yaml
@@ -1,7 +1,7 @@
 obstacle_range: 2.5
 raytrace_range: 3.0
 #footprint: [[x0, y0], [x1, y1], ... [xn, yn]]
-robot_radius: .3        #This is a guess on how big the jackal is
+robot_radius: 0.3        #This is a guess on how big the jackal is
 inflation_radius: 0.0
 
 observation_sources: laser_scan_sensor #point_cloud_sensor
@@ -9,3 +9,4 @@ observation_sources: laser_scan_sensor #point_cloud_sensor
 laser_scan_sensor: {sensor_frame: front_laser, data_type: LaserScan, topic: /front/scan, marking: true, clearing: true}
 
 #point_cloud_sensor: {sensor_frame: frame_name, data_type: PointCloud, topic: topic_name, marking: true, clearing: true}
+
