--- a/config/local_costmap_params.yaml
+++ b/config/local_costmap_params.yaml
@@ -4,7 +4,8 @@ local_costmap:
   update_frequency: 5.0
   publish_frequency: 1.0
   static_map: false
-  rolling_window: true
+  rolling_window: false
   width: 10.0
   height: 10.0
   resolution: 0.05
+  pcl_topic: /rtabmap/ground_cloud
