We have a semi working version. Sometimes vehicle doesn't move. I don't know why

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -296,27 +296,28 @@ target_link_libraries(local_planner_lib X11)
 set_target_properties(local_planner_lib PROPERTIES COMPILE_FLAGS "-O3")
 
 
-#add_executable(test_planner_node src/test_planner_node.cpp)
-#  src/DStarPlanner.cpp
-#  src/GlobalParams.cpp
-#  src/GlobalPlanner.cpp
-#  src/JackalStatePropagator.cpp
-#  src/TerrainMap.cpp
-#  src/JackalDynamicSolver.cpp
-#  src/PlannerVisualizer.cpp
-#  src/utils.cpp
-#  src/VehicleStateSpace.cpp
-#  src/VehicleStateProjections.cpp
-#  src/VehicleControlSampler.cpp
-#  src/DirectedVehicleControlSampler.cpp
-#  src/VehicleRRT.cpp
-#  )
 
 
-#target_link_libraries(test_planner_node ${OCTOMAP_LIBRARIES})
-#target_link_libraries(test_planner_node ${OMPL_LIBRARIES})
-#target_link_libraries(test_planner_node ${catkin_LIBRARIES})
-#target_link_libraries(test_planner_node rbdl)
-#target_link_libraries(test_planner_node X11)
 
-#set_target_properties(test_planner_node PROPERTIES COMPILE_FLAGS "")
+
+add_executable(test_cs_node
+  src/test_control_system.cpp
+  src/GlobalParams.cpp
+  src/ControlSystem.cpp
+)
+
+
+
+
+
+target_link_libraries(test_cs_node ${PCL_LIBRARIES})
+target_link_libraries(test_cs_node ${pluginlib_LIBRARIES})
+target_link_libraries(test_cs_node ${costmap_2d_LIBRARIES})
+target_link_libraries(test_cs_node ${move_base_LIBRARIES})
+target_link_libraries(test_cs_node ${OCTOMAP_LIBRARIES})
+target_link_libraries(test_cs_node ${OMPL_LIBRARIES})
+target_link_libraries(test_cs_node ${catkin_LIBRARIES})
+target_link_libraries(test_cs_node rbdl)
+target_link_libraries(test_cs_node X11)
+
+set_target_properties(test_cs_node PROPERTIES COMPILE_FLAGS "-O3")
