--- a/package.xml
+++ b/package.xml
@@ -55,6 +55,7 @@
   <depend>pluginlib</depend>
   <depend>move_base</depend>
   <depend>octomap</depend>
+  <depend>auvsl_control</depend>
   
   <!-- The export tag contains other, unspecified, tags -->
   <export>
