--- a/config/params.yaml
+++ b/config/params.yaml
@@ -22,3 +22,5 @@ angular_variance: .3
 p_gain: 1
 goal_tolerance: .01 #goal region is a square +-goal_tolerance
 max_gp_runtime: 600 #maximum global planner runtime in seconds
+disable_gp: false
+disable_lp: true
