Lots of tests and scripts

--- a/config/params.yaml
+++ b/config/params.yaml
@@ -10,16 +10,16 @@ planner_resolution: .01
 state_checker_resolution: .01   # 1%
 propagation_step_size: .1
 visualize_planner: 1
-goal_bias: .1
-goal_bias2: .5
+goal_bias: .05
+goal_bias2: 0
 distance_weights: [1,1,0,0]
 add_intermediate_states: true
 num_control_samples: 5
-seed: 9 #useful for debugging and getting deterministic results
+seed: 8 #useful for debugging and getting deterministic results
 heading_heuristic: 0  # 0 -> 1, 1 is try to match heading, 0 is try to match position
 forward_variance: 1
 angular_variance: .3
-p_gain: 1
+p_gain: 2
 goal_tolerance: .01 #goal region is a square +-goal_tolerance
 max_gp_runtime: 600 #maximum global planner runtime in seconds
 disable_gp: false
